[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawmemory"
version = "0.2.0"
authors = [
  { name = "HornTech", email = "dev@horntech.co.nz" }
]
description = "DreamClaw your AI's memory—three-layer, sleep-synced architecture so your agent never forgets!"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["ai", "agent", "memory", "llm", "semantic-search", "qmd"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/alvindeanz/clawmemory"
Repository = "https://github.com/alvindeanz/clawmemory"
Issues = "https://github.com/alvindeanz/clawmemory/issues"

[project.optional-dependencies]
dev = ["black", "flake8", "pytest"]
